Backend Apis Completed

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE=mongodb+srv://user:12345@cluster0.dguuu.mongodb.net/tshirt?retryWrites=true&w=majority
 jqe-ucwe-kbh
+SECRET = learncodeonline
+mongodb+srv://user:<password>@cluster0.dguuu.mongodb.net/tshirt?retryWrites=true&w=majority
